# nonebot-plugin-sunoai

./: README.md  pyproject.toml
nonebot_plugin_sunoai/: __init__.py  config.py
